/*
Copyright (c) 2024 Diagrid Inc.
Licensed under the MIT License.
*/

syntax = "proto3";

package storage;

import "google/protobuf/any.proto";

option go_package = "github.com/diagridio/go-etcd-cron/storage;storage";

// JobRecord is the record persisted as value in Etcd (not the key).
// Namespace is handled by prefixing the key in the database.
message JobRecord {
  string name = 1;
  string rhythm = 2;
  int64 startTimestamp = 3;  // time that the schedule starts
  int32 repeats = 4;  // time total time the job should trigger
  map<string, string> metadata = 5;
  google.protobuf.Any payload = 6;
}