/*
Copyright (c) 2024 Diagrid Inc.
Licensed under the MIT License.
*/

syntax = "proto3";

package api;

import "google/protobuf/any.proto";

option go_package = "github.com/diagridio/go-etcd-cron/api";

// TriggerRequest is the request sent to the caller when a job is triggered.
message TriggerRequest {
  // name is the name of the job that was triggered.
  string name = 1;

  // metadata is the arbitrary metadata associated with the job.
  google.protobuf.Any metadata = 2;

  // payload is the job payload.
  google.protobuf.Any payload = 3;
}
